--- a/app/src/main/res/layout/fragment_android__tutorial.xml
+++ b/app/src/main/res/layout/fragment_android__tutorial.xml
@@ -24,6 +24,24 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/mTxt_topic_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="choose a option"
+                    android:textAlignment="center"
+                    android:textAllCaps="true"
+                    android:textColor="@color/common_google_signin_btn_text_dark_pressed"
+                    android:textSize="36sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
                     android:id="@+id/textView3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
