--- a/app/src/main/res/layout/content_memorize_version1.xml
+++ b/app/src/main/res/layout/content_memorize_version1.xml
@@ -64,9 +64,9 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:orientation="vertical"
-                android:paddingStart="30dp"
-                android:paddingTop="30dp"
-                android:paddingEnd="30dp">
+                android:paddingStart="10dp"
+                android:paddingTop="10dp"
+                android:paddingEnd="10dp">
 
                 <TextView
                     android:id="@+id/mTxt_PointEachQ"
@@ -77,6 +77,7 @@
                     android:gravity="right"
                     android:paddingTop="10dp"
                     android:paddingEnd="10dp"
+                    android:paddingBottom="5dp"
                     android:text="TextView"
                     android:textColor="@color/common_google_signin_btn_text_dark_focused"
                     android:textStyle="bold" />
@@ -87,7 +88,7 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/memorize_question_backg"
                     android:gravity="center"
-                    android:padding="2dp"
+                    android:padding="8dp"
                     android:text="question"
                     android:textAlignment="center"
                     android:textColor="@color/common_google_signin_btn_text_dark_focused"
@@ -129,13 +130,15 @@
                 android:id="@+id/mL_explanation"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="30dp"
-                android:layout_marginEnd="30dp"
-                android:layout_marginBottom="30dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="0dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="0dp"
                 android:background="@drawable/memorize_lower_background"
                 android:orientation="vertical"
-                android:padding="2dp"
-                android:paddingStart="0dp"
+                android:padding="10dp"
                 android:paddingEnd="0dp"
                 android:paddingBottom="0dp"
                 android:visibility="visible">
@@ -144,7 +147,7 @@
                     android:id="@+id/mTxt_E1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="5dp"
+                    android:padding="8dp"
                     android:text="e"
                     android:textAlignment="center"
                     android:textColor="@color/common_google_signin_btn_text_dark_focused" />
@@ -153,7 +156,7 @@
                     android:id="@+id/mTxt_E2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="5dp"
+                    android:padding="8dp"
                     android:text=""
                     android:textAlignment="textStart"
                     android:textColor="@color/common_google_signin_btn_text_dark_focused" />
@@ -216,7 +219,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="5dp"
-                        android:progressBackgroundTint="@color/colorPrimaryDark"
+                        android:progressBackgroundTint="#FFFFFF"
                         android:progressTint="@android:color/holo_red_dark" />
 
                     <TextView
@@ -234,7 +237,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="5dp"
                         android:indeterminate="false"
-                        android:progressBackgroundTint="@color/colorPrimaryDark"
+                        android:progressBackgroundTint="#FFFFFF"
                         android:progressTint="@android:color/holo_orange_light" />
 
                     <TextView
@@ -251,7 +254,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="5dp"
-                        android:progressBackgroundTint="@color/colorPrimaryDark"
+                        android:progressBackgroundTint="#FFFFFF"
                         android:progressTint="@android:color/holo_green_dark" />
                 </LinearLayout>
             </LinearLayout>
